2001-10-29  Akim Demaille  <akim@epita.fr>

	* m4/lispdir.m4 (AM_PATH_LISPDIR): Use AC_RUN_LOG to avoid
	cluttering configure's stdout.

	
2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in: Various formatting changes.
	(create): Remove, unused.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in (&append_exeext): New.
	(&am_primary_prefixes): Use it.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in (am_primary_prefixes): Now, in accordance with its
	comment, return the list of prefixes actually used, not all the
	possible prefixes for a primary.
	(&handle_libraries, &handle_ltlibraries, &handle_java)
	(&am_install_var): Adjust.
	* Makefile.am (maintainer-check): Allow `local $_;'.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in: Various formatting changes.
	(&variable_defined): Second argument is optional.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in (&am_primary_prefixes): Now returns a list, not a
	hash.
	(&handle_libraries, &handle_ltlibraries, &handle_java)
	(&am_install_var): Adjust.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in (@libtoolize_files, @libtoolize_sometimes): Rename
	as...
	(@libtool_files, @libtool_sometimes): these.
	($libtool_location): Remove, completely replaced by $seen_libtool.
	(&require_file_internal): Do not run libtoolize, that's
	autoreconf's job.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* tests/acoutnoq.test, tests/acoutput.test, tests/acoutqnl.test,
	* tests/acouttbs.test, tests/auxdir.test, tests/colon.test,
	* tests/colon2.test, tests/colon3.test, tests/colon4.test,
	* tests/colon5.test, tests/colon6.test, tests/colon7.test,
	* tests/conf2.test, tests/config.test, tests/depcomp.test,
	* tests/depcomp2.test, tests/discover.test, tests/fpinst2.test,
	* tests/fpinstall.test, tests/ldadd.test, tests/libobj7.test,
	* tests/libobj8.test, tests/output.test, tests/output2.test,
	* tests/output3.test, tests/output4.test, tests/output5.test,