@@ -1,9 +1,18 @@
+2001-10-30  Akim Demaille  <akim@epita.fr>
+
+	* automake.in ($verbose): Remove, inherited from
+	Automake::General.
+	(&variable_delete): Rename as...
+	(&macro_delete): this, for consistency.
+	(&variable_assert): New.
+	(&variable_value_as_list, &variable_value_as_list_recursive_worker):
+	Use it.
+
 2001-10-29  Akim Demaille  <akim@epita.fr>
 
 	* m4/lispdir.m4 (AM_PATH_LISPDIR): Use AC_RUN_LOG to avoid
 	cluttering configure's stdout.
 
-	
 2001-10-28  Akim Demaille  <akim@epita.fr>
 
 	* automake.in: Various formatting changes.
@@ -69,7 +78,7 @@
 	(&initialize_per_input): Don't initialize several times the same
 	vars.
 
-	
+
 2001-10-28  Akim Demaille  <akim@epita.fr>
 
 	* automake.in (scan_one_autoconf_file): When using %generalize, be
